--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
-<style>
-body {
-  background-color: linen;
-}
-
-h1 {
+<style type="text/css">
+  h1 {
   color: maroon;
   margin-left: 40px;
+  text-align: center;
+  
+}
+body {
+  background-color: linen;
+   
 }
 img.img1{
-	height: 50%;
-	width: 50%
+  height: 50%;
+  width: 50%
 
 }
 </style>
@@ -24,14 +26,14 @@ img.img1{
 	
  
 
-	<h1>Welcome to the best collection of Dog images. </h1>
+	<h1 style= "font-family: 'Brush Script MT', cursive;">Welcome to the best collection of Dog images. </h1>
 <div class="navbar">
   <a href="Home.html" class="navbar">Home</a>
   <a href="About.html" class="navbar">About</a>
   <a href="ContactUs.html" class="navbar">Contact Us</a>
   <a href="News.html" class="navbar">News</a>
 </div>
-	<img src="img1.jpg" class="intro"  width="600" height="300" alt = "Intro Image" >
+	<img src="img1.jpg" class="intro"  width="100%" height="100%" alt = "Intro Image" >
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
