--- a/index.html
+++ b/index.html
@@ -2,6 +2,43 @@
 <!DOCTYPE html>
 <html>
 <style type="text/css">
+*{
+  box-sizing: border-box;
+}
+.menu {
+  float: left;
+  width: 20%;
+  text-align: center;
+}
+.menu a {
+  background-color: #e5e5e5;
+  padding: 8px;
+  margin-top: 7px;
+  display: block;
+  width: 100%;
+  color: black;
+}
+.main {
+  float: left;
+  width: 60%;
+  padding: 0 20px;
+}
+
+.right {
+  background-color: #e5e5e5;
+  float: left;
+  width: 20%;
+  padding: 15px;
+  margin-top: 7px;
+  text-align: center;
+}
+
+@media only screen and (max-width: 620px) {
+  /* For mobile phones: */
+  .menu, .main, .right {
+    width: 100%;
+  }
+}
   h1 {
   color: maroon;
   margin-left: 40px;
@@ -22,6 +59,7 @@ img.img1{
 <head>
 	<title> Nandini Sharma </title>
 	<link rel="stylesheet" href="doggo.css">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 <body>
 	
@@ -57,7 +95,30 @@ img.img1{
   </div>
 </div>
 	
-  
+  <div style="overflow: auto;"
+<div class="menu">
+  <a href="strongest.html">Click here for the details of  top 10 strongest dogs :</a>
+  <a href="meme.html">Click here for the top 10 cutest dogs :</a>
+  <a href="meme.html">Click here for the top 10 smartest dogs :</a>
+  <a href="meme.html">Click here for the top 10 Indian dogs :</a>
+</div>
+<div class="main">
+  <h2>Lorum Ipsum</h2>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore, nostrum molestias dolorum minus fugiat doloremque illum rerum provident vel Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, sequi quae voluptate minima deleniti ipsum modi, inventore quos non ducimus iste accusantium fugit at praesentium dicta nisi. Iusto, vitae et. sunt! Deleniti placeat qui reprehenderit sequi ullam corrupti voluptatem maiores pariatur? Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+</div>
+
+<div class="right">
+  <h2>About</h2>
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolorem rerum iure totam praesentium, dolorum vitae mollitia magni quisquam perferendis fugiat quidem rem temporibus in blanditiis vero! Rem, ipsa dicta. ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+</div>
+</div>
+
+</div>
+
+<br>
+<hr>
+<br>
+
 <nav><a href="strongest.html"><h2>Click here for the details of  top 10 strongest dogs :</h2></a></nav>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
