--- a/index.html
+++ b/index.html
@@ -80,19 +80,7 @@ img.img1{
 	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-	<div class="row">
-  <div class="column">
-    <img src="img4.jpg" alt="doggo" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="img5.jpg" alt="doggo" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="img6.jpg" alt="doggo" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="img3.jpg" alt="doggo" style="width:100%">
-  </div>
+	
 </div>
 	
   <div style="overflow: auto;"
@@ -118,6 +106,21 @@ img.img1{
 <br>
 <hr>
 <br>
+
+<div class="row">
+  <div class="column">
+    <img src="img4.jpg" alt="doggo" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="img5.jpg" alt="doggo" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="img6.jpg" alt="doggo" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="img3.jpg" alt="doggo" style="width:100%">
+  </div>
+</div>
 
 <nav><a href="strongest.html"><h2>Click here for the details of  top 10 strongest dogs :</h2></a></nav>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -159,6 +162,7 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 <nav><a href="meme.html"><h2>Click here for the top 10 Indian dogs :</h2></a></nav>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dolores exercitationem iusto, perspiciatis accusamus natus omnis architecto sit quam laudantium nihil, beatae similique reiciendis accusantium labore itaque, e ius repellendus nemo.</p>
 
 <p></p>
 <footer>
