--- a/index.html
+++ b/index.html
@@ -1,184 +1,10 @@
-
 <!DOCTYPE html>
 <html>
-<style type="text/css">
-*{
-  box-sizing: border-box;
-}
-.menu {
-  float: left;
-  width: 20%;
-  text-align: center;
-}
-.menu a {
-  background-color: #e5e5e5;
-  padding: 8px;
-  margin-top: 7px;
-  display: block;
-  width: 100%;
-  color: black;
-}
-.main {
-  float: left;
-  width: 60%;
-  padding: 0 20px;
-}
+  <head>
 
-.right {
-  background-color: #e5e5e5;
-  float: left;
-  width: 20%;
-  padding: 15px;
-  margin-top: 7px;
-  text-align: center;
-}
-
-@media only screen and (max-width: 620px) {
-  /* For mobile phones: */
-  .menu, .main, .right {
-    width: 100%;
-  }
-}
-  h1 {
-  color: maroon;
-  margin-left: 40px;
-  text-align: center;
-  
-}
-body {
-  background-color: linen;
-   
-}
-img.img1{
-  height: 50%;
-  width: 50%
-
-}
-</style>
-
-<head>
-	<title> Nandini Sharma </title>
-	<link rel="stylesheet" href="doggo.css">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-</head>
-<body>
-	
- 
-
-	<h1 style= "font-family: 'Brush Script MT', cursive;">Welcome to the best collection of Dog images. </h1>
-<div class="navbar">
-  <a href="Home.html" class="navbar">Home</a>
-  <a href="About.html" class="navbar">About</a>
-  <a href="ContactUs.html" class="navbar">Contact Us</a>
-  <a href="News.html" class="navbar">News</a>
-</div>
-	<img src="img1.jpg" class="intro"  width="100%" height="100%" alt = "Intro Image" >
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-	
-</div>
-	
-  <div style="overflow: auto;"
-<div class="menu">
-  <a href="strongest.html">Click here for the details of  top 10 strongest dogs :</a>
-  <a href="meme.html">Click here for the top 10 cutest dogs :</a>
-  <a href="meme.html">Click here for the top 10 smartest dogs :</a>
-  <a href="meme.html">Click here for the top 10 Indian dogs :</a>
-</div>
-<div class="main">
-  <h2>Lorum Ipsum</h2>
-  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore, nostrum molestias dolorum minus fugiat doloremque illum rerum provident vel Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, sequi quae voluptate minima deleniti ipsum modi, inventore quos non ducimus iste accusantium fugit at praesentium dicta nisi. Iusto, vitae et. sunt! Deleniti placeat qui reprehenderit sequi ullam corrupti voluptatem maiores pariatur? Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-</div>
-
-<div class="right">
-  <h2>About</h2>
-  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolorem rerum iure totam praesentium, dolorum vitae mollitia magni quisquam perferendis fugiat quidem rem temporibus in blanditiis vero! Rem, ipsa dicta. ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-</div>
-</div>
-
-</div>
-
-<br>
-<hr>
-<br>
-
-<div class="row">
-  <div class="column">
-    <img src="img4.jpg" alt="doggo" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="img5.jpg" alt="doggo" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="img6.jpg" alt="doggo" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="img3.jpg" alt="doggo" style="width:100%">
-  </div>
-</div>
-
-<nav><a href="strongest.html"><h2>Click here for the details of  top 10 strongest dogs :</h2></a></nav>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<h2>Top 10 strongest dogs:
-    </h2>
-
-  <h4> <ul>
-  <li>Mastiff. </li>
-  <li>Saint Bernard</li>
-  <li>Rottweiler.</li>
-  <li>Irish Wolfhound.</li>
-  <li>Pit Bull. </li>
-  <li>Siberian Husky.</li>
-  <li>Boxer</li>
-  <li>Newfoundland.</li>
-  <li>Great Dane</li>
-  <li>  German Shepherd</li>
-</ul></h4>
-
-<nav><a href="meme.html"><h2>Click here for the top 10 cutest dogs :</h2></a></nav>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-<nav><a href="meme.html"><h2>Click here for the top 10 smartest dogs :</h2></a></nav>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-<nav><a href="meme.html"><h2>Click here for the top 10 Indian dogs :</h2></a></nav>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dolores exercitationem iusto, perspiciatis accusamus natus omnis architecto sit quam laudantium nihil, beatae similique reiciendis accusantium labore itaque, e ius repellendus nemo.</p>
-
-<p></p>
-<footer>
-  <p>Author: Nandini Sharma<br>
-  <a href="mailto:Nandinisharma1324@gmail.com">nandinisharma1324@gmail.com</a></p>
-  <form action="/action_page.php" method="get">
-  <label for="fname">First name:</label>
-  <input type="text" id="fname" name="fname"><br><br>
-  <label for="lname">Last name:</label>
-  <input type="text" id="lname" name="lname"><br><br>
-  <label for="contact">Contact No: </label>
-  <input type="integer" id="contact" name="contact"><br><br>
-  <input type="submit" value="Submit">
-</form>
-</footer>
-</body>
-
+  </head>
+  <body>
+    <p>Test-Nandini Sharma</p>
+    <a href="test.html">The test begins here.</a>
+  </body>
 </html>
-
