--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <p>Test-Nandini Sharma</p>
-    <a href="test.html">The test begins here.</a>
+    <a href="test.html">My WEBSITE ...</a>
   </body>
 </html>
