--- a/test.html
+++ b/test.html
@@ -106,6 +106,50 @@ img.img1{
 <br>
 <hr>
 <br>
+<h2 style= "font-family: 'Brush Script MT', cursive;" >Description </h2>
+	<div class="grid square">
+		<div class="box">
+			<div class="cont">
+				<div class="inbox">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				</div>
+			</div>
+		</div>
+		<div class="box">
+			<div class="cont">
+				<div class="inbox">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				</div>
+			</div>
+		</div>
+		<div class="box">
+			<div class="cont">
+				<div class="inbox">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				</div>
+			</div>
+		</div>
+		<div class="box">
+			<div class="cont">
+				<div class="inbox">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="grid long">
+		<div class="col">
+
+		</div>
+	</div>
 
 <div class="row">
   <div class="column">
